Version 5.1

* Fix for #656 removeCondition errors when a condition does not exist in statusEffects 
* Fix for #662 Artifacts are not seen as mythical

Version 5.0
* Updated for Foundry vtt version 12

Version 4.5

* Updated corruption threshold bonus bug #652
* Bug with strangler ability corrected #649
* Revenant's Strike Mystic Power support added

Version 4.4.2

* Missed out a comma in the German language update

Version 4.4.1

* Fixed poor handling of token document for targets (resolves rolling for monsters in non-EC)
* German language updates

Version 4.4

* Impeding automated
* IMPORTANT CHANGE: Editable Impeding value is now removed from the screens - use bonus fields if you want to reduce the impeding value from the ones in the book or use worldscript to change system default values
* Fixed poor handling of tooltips when displaying items with names containing escape characters #641
* Added API support for custom Qualities, Compatibilities and bonuses for Armor & Weapons
* Added compatibility with Staff Magic - ensure compatibility with staff magic is set on your rune staff, issue #514
* Enforcing minimum migration version rather than failing
* Removed corruption cost for maintaining Dancing Weapon

Version 4.3.2

Fixed bugs introduced in 4.3
* Could not create items
* Enhanced Combat rolling damage for NPCs

Version 4.3.1

Updated NEEDS_MIGRATION_VERSION so that it actually performs the migration.

Version 4.3
Added functionality for visibility if ability/trait is integrated
Amended functionality for displaying which ability/trait can be activated
Added (self configuring) context menu for items
Added quantity changes for equipment to context menu
Added ability use to context menu
Added attack/defense use to context menu (this means you can do these from the gear page now)
Removed trashcans - this is now on context menu (right click)
Fix for man-at-arms and armor #617
Removed the use of html table elements from the character sheets