@@ -19,7 +19,10 @@
     <h1>Change history since last release</h1>
     <p>
         <ul>
-            <li>Updated for v12 compatibility</li>
+            <li>Fixed issue with registering dice with chat messages #664</li>
+            <li>Artifacts are not seen as mythical #662</li>
+            <li>Removal of conditions without matching status effect #656</li>
+            <li>Bounce system for when "Multiple attacks for NPC" is changed #655</li>
         </ul>
     </p>
 
